--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -70,7 +70,15 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
-h2.
+h2{
+    margin-top: 10px;
+    bottom: 10px;
+}
+
+img{
+    width: 180px;
+    height: auto;
+}
 
 .point-container {
     margin: 10px 10px;
