--- a/src/main/resources/static/css/board/writeContentForm.css
+++ b/src/main/resources/static/css/board/writeContentForm.css
@@ -75,6 +75,7 @@ textarea {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    margin-bottom: 15px;
 }
 
 input[type="button"],
