--- a/src/main/resources/templates/board/writeContentForm.html
+++ b/src/main/resources/templates/board/writeContentForm.html
@@ -6,9 +6,9 @@
 
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/board/writeContentForm.css}">
-<!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
+  <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
 
-<!--  <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>-->
+  <!--  <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>-->
   <script src="/ckeditor5-39.0.1-q2hcooty1ujs/build/ckeditor.js"></script>
   <script th:src="@{/js/board/writeContentConfirm.js}" type="text/javascript"></script>
 </head>
@@ -20,7 +20,7 @@
 
     <div class="word">
 
-      <h3>WRITE CONTENT PAGE</h3>
+      <h3>게시물 작성</h3>
 
     </div>
 
@@ -34,7 +34,7 @@
         <br>
         <textarea id="editor" name="content"></textarea>
         <input type="file" name="files" id="fileInput"
-               multiple="multiple" style="display:block;"
+               multiple="multiple" style="display:none;"
                accept=" application/vnd.ms-excel,
                         application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,
                         text/plain,
@@ -42,7 +42,7 @@
                         text/html,
                         audio/*,
                         .pdf">
-        <label for="fileInput">SELECT FILE(S)</label>
+        <label for="fileInput">첨부파일 선택</label>
         <input id="submitBtn" type="button" value="Delete" onclick="deleteFiles()">
         <div id="fileInfo" ></div>
         <!--첨부파일 유효성 검사 START-->
@@ -111,37 +111,37 @@
   </div>
 </section>
 <!--  CK Editor START-->
-  <script>
-    ClassicEditor.create(document.querySelector('#editor'),{
-      toolbar: [
-        'exportPdf', 'exportWord', '|',
-        'heading', '|',
-        'alignment', 'bold', 'italic', 'underline', 'fontSize', '|',
-        'fontColor', 'fontBackgroundColor', 'highlight', '|',
-        'imageUpload', 'insertTable', 'link', 'undo', 'redo'
-      ],
-      language: "ko",
-      ckfinder : {
-        uploadUrl: "/image/upload"
-      }
-    })
-    // .then(editor => {
-    //   ('#submitBtn').click(function () {
-    //     writePost(editor);
-    //   })
-    // })
-    // .error(error => {
-    //   console.log(error);
-    // })
-  </script>
-  <style>
-    .ck-editor__editable {
-      height: 600px;
+<script>
+  ClassicEditor.create(document.querySelector('#editor'),{
+    toolbar: [
+      'exportPdf', 'exportWord', '|',
+      'heading', '|',
+      'alignment', 'bold', 'italic', 'underline', 'fontSize', '|',
+      'fontColor', 'fontBackgroundColor', 'highlight', '|',
+      'imageUpload', 'insertTable', 'link', 'undo', 'redo'
+    ],
+    language: "ko",
+    ckfinder : {
+      uploadUrl: "/image/upload"
     }
-    .ck-content {
-      font-size: 13px;
-    }
-  </style>
-  <!--CK Editor END-->
+  })
+  // .then(editor => {
+  //   ('#submitBtn').click(function () {
+  //     writePost(editor);
+  //   })
+  // })
+  // .error(error => {
+  //   console.log(error);
+  // })
+</script>
+<style>
+  .ck-editor__editable {
+    height: 600px;
+  }
+  .ck-content {
+    font-size: 13px;
+  }
+</style>
+<!--CK Editor END-->
 </body>
 </html>
