--- a/src/main/resources/templates/user/parents/modifyAccountForm.html
+++ b/src/main/resources/templates/user/parents/modifyAccountForm.html
@@ -5,6 +5,10 @@
 
     </title>
 
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+    <link rel="stylesheet" th:href="@{/css/user/student/modifyAccountForm.css}">
+
     <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/parents/modifyAccountFormJs.html::js}" type="text/javascript"></script>
@@ -119,7 +123,7 @@
                     </div>
                     <div class="btn_container">
                         <input type="button" value="회원 수정" onclick="modifyAccountConfirm();">
-                        <br>
+                        &nbsp;
                         <input class="delete" type="button" value="계정 삭제" th:data-no="${session.loginedParentsDto.no}">
                     </div>
                     <br>
