--- a/src/main/resources/templates/user/member/updatePasswordForm.html
+++ b/src/main/resources/templates/user/member/updatePasswordForm.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title th:replace="~{include/title.html::title}"></title>
 
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
 
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/student/updatePasswordFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/student/updatePasswordFormJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
-    <header th:replace="~{/include/headerNavFooter.html::header}">
+    <header th:replace="~{include/headerNavFooter.html::header}">
     </header>
 
-    <nav th:replace="~{/include/headerNavFooter.html::nav}">
+    <nav th:replace="~{include/headerNavFooter.html::nav}">
     </nav>
 
 <section>
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<footer th:replace="~{/include/headerNavFooter.html::footer}">
+<footer th:replace="~{include/headerNavFooter.html::footer}">
 
 </footer>
 
