--- a/src/main/resources/templates/user/member/updatePasswordFormForFindPassword.html
+++ b/src/main/resources/templates/user/member/updatePasswordFormForFindPassword.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}">
+    <title th:replace="~{include/title.html::title}">
 
     </title>
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/student/updatePasswordFormForFindPasswordJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/student/updatePasswordFormForFindPasswordJs.html::js}" type="text/javascript"></script>
 
 
 </head>
 <body>
 
-<header th:replace="~{/include/headerNavFooter.html::header}">
+<header th:replace="~{include/headerNavFooter.html::header}">
 </header>
 
 
-<nav th:replace="~{/include/headerNavFooter.html::nav}">
+<nav th:replace="~{include/headerNavFooter.html::nav}">
 
 </nav>
 
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<footer th:replace="~{/include/headerNavFooter.html::footer}">
+<footer th:replace="~{include/headerNavFooter.html::footer}">
 
 </footer>
 
