--- a/src/main/resources/templates/board/freeBoardListForm.html
+++ b/src/main/resources/templates/board/freeBoardListForm.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title th:replace="~{include/title.html::title}"></title>
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/board/boardListForm.css}">
 
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/board/listJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/board/listJs.html::js}" type="text/javascript"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>
 </head>
 <body>
 
-    <header th:replace="~{/include/headerNavFooter.html::header}">
+    <header th:replace="~{include/headerNavFooter.html::header}">
     </header>
 
     <div id = "wrap">
-        <nav th:replace="~{/include/headerNavFooter.html::nav}">
+        <nav th:replace="~{include/headerNavFooter.html::nav}">
         </nav>
         <section id="sectionWrap">
             <div class="search-container">
@@ -78,7 +78,7 @@
             </div>
         <!-- PAGENATION END -->
     </section>
-    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    <footer th:replace="~{include/headerNavFooter.html::footer}">
     </footer>
 </div>
 </body>
