--- a/src/main/resources/templates/board/modifyContentForm.html
+++ b/src/main/resources/templates/board/modifyContentForm.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title th:replace="~{/include/title.html::title}"></title>
+  <title th:replace="~{include/title.html::title}"></title>
 
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/board/writeContentForm.css}">
 
-<!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
+<!--  <script th:replace="~{include/use_console.html::js}" type="text/javascript"></script>-->
   <script src="/ckeditor5-39.0.1-q2hcooty1ujs/build/ckeditor.js"></script>
   <script th:src="@{/js/board/modifyContentConfirm.js}" type="text/javascript"></script>
 </head>
