--- a/src/main/resources/templates/board/writeContentForm.html
+++ b/src/main/resources/templates/board/writeContentForm.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title th:replace="~{/include/title.html::title}"></title>
+  <title th:replace="~{include/title.html::title}"></title>
 
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/board/writeContentForm.css}">
-  <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
+  <!--  <script th:replace="~{include/use_console.html::js}" type="text/javascript"></script>-->
 
   <!--  <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>-->
   <script src="/ckeditor5-39.0.1-q2hcooty1ujs/build/ckeditor.js"></script>
