--- a/src/main/resources/templates/notice/detailNoticeForm.html
+++ b/src/main/resources/templates/notice/detailNoticeForm.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title th:replace="~{/include/title.html::title}"></title>
+  <title th:replace="~{include/title.html::title}"></title>
 
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
@@ -10,20 +10,20 @@
   <link rel="stylesheet" th:href="@{/css/notice/noticeDetailForm.css}">
 
   <script src="/ckeditor5-39.0.1-q2hcooty1ujs/build/ckeditor.js"></script>
-  <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-  <script th:replace="~{/include/board/replyJs.html::js}" type="text/javascript"></script>
+  <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+  <script th:replace="~{include/board/replyJs.html::js}" type="text/javascript"></script>
   <script th:src="@{/js/board/modifyContentConfirm.js}" type="text/javascript"></script>
 
-  <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
+  <!--  <script th:replace="~{include/use_console.html::js}" type="text/javascript"></script>-->
 
 </head>
 <body>
 
-<header th:replace="~{/include/headerNavFooter.html::header}">
+<header th:replace="~{include/headerNavFooter.html::header}">
 </header>
 
 <div id="wrap">
-  <nav th:replace="~{/include/headerNavFooter.html::nav}">
+  <nav th:replace="~{include/headerNavFooter.html::nav}">
   </nav>
   <section id="sectionWrap">
     <div class="title">
