--- a/src/main/resources/templates/product/paymentHistory.html
+++ b/src/main/resources/templates/product/paymentHistory.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" th:href="@{/css/product/mySchoolProductForm.css}">
   <link rel="stylesheet" th:href="@{/css/product/list.css}">
 
-  <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-  <script th:replace="~{/include/product/paymentHistory_js.html::js}" type="text/javascript"></script>
+  <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+  <script th:replace="~{include/product/paymentHistory_js.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
 
-<header th:replace="~{/include/headerNavFooter.html::header}">
+<header th:replace="~{include/headerNavFooter.html::header}">
 </header>
 
 <section>
