--- a/src/main/resources/templates/user/beforeCreateAccount.html
+++ b/src/main/resources/templates/user/beforeCreateAccount.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title th:replace="~{/include/title.html::title}"></title>
+  <title th:replace="~{include/title.html::title}"></title>
 
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
   <link rel="stylesheet" th:href="@{/css/user/beforeCreateAccount.css}">
 
-  <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-  <script th:replace="~{/include/member/loginFormJs.html::js}" type="text/javascript"></script>
+  <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+  <script th:replace="~{include/member/loginFormJs.html::js}" type="text/javascript"></script>
 </head>
 <body>
 
@@ -51,7 +51,7 @@
   </div>
 </section>
 
-<footer th:replace="~{/include/headerNavFooter.html::footer}">
+<footer th:replace="~{include/headerNavFooter.html::footer}">
 
 </footer>
 
