--- a/src/main/resources/templates/user/member/findPasswordForm.html
+++ b/src/main/resources/templates/user/member/findPasswordForm.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title th:replace="~{include/title.html::title}"></title>
 
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/user/findPasswordForm.css}">
 
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/findPasswordFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/findPasswordFormJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -75,7 +75,7 @@
                 </div>
             </form>
     </section>
-    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    <footer th:replace="~{include/headerNavFooter.html::footer}">
     </footer>
 </div>
 
