--- a/src/main/resources/templates/user/parents/createAccountForm.html
+++ b/src/main/resources/templates/user/parents/createAccountForm.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title th:replace="~{include/title.html::title}"></title>
 
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/user/parents/createAccountForm.css}">
 
-    <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/parents/createAccountFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/use_console.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/parents/createAccountFormJs.html::js}" type="text/javascript"></script>
 </head>
 <body>
 <div id = "wrap">
@@ -156,7 +156,7 @@
             </div>
         </div>
     </section>
-    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    <footer th:replace="~{include/headerNavFooter.html::footer}">
     </footer>
 </div>
 
