--- a/src/main/resources/templates/user/parents/leavePassList.html
+++ b/src/main/resources/templates/user/parents/leavePassList.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title th:replace="~{include/title.html::title}"></title>
 
     <link rel="stylesheet" th:href="@{/css/test.css}">
 
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/parents/leaveOutListJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/parents/leaveOutListJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
