--- a/src/main/resources/templates/user/parents/modifyAccountResult.html
+++ b/src/main/resources/templates/user/parents/modifyAccountResult.html
@@ -1,5 +1,5 @@
 
-  <title th:replace="~{/include/title.html::title}">
+  <title th:replace="~{include/title.html::title}">
 
   </title>
   <script th:inline="javascript">
