--- a/src/main/resources/templates/user/student/leaveOutForm.html
+++ b/src/main/resources/templates/user/student/leaveOutForm.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title th:replace="~{include/title.html::title}"></title>
 
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/user/student/leaveOutForm.css}">
 
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/student/leaveOutFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/student/leaveOutFormJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
-<!--<header th:replace="~{/include/headerNavFooter.html::header}">-->
+<!--<header th:replace="~{include/headerNavFooter.html::header}">-->
 <!--</header>-->
-<!--<nav th:replace="~{/include/headerNavFooter.html::nav}">-->
+<!--<nav th:replace="~{include/headerNavFooter.html::nav}">-->
 <!--</nav>-->
 <div id = "wrap">
     <div class="logo">
@@ -83,7 +83,7 @@
             </div>
         </div>
     </section>
-    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    <footer th:replace="~{include/headerNavFooter.html::footer}">
     </footer>
 </div>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
