--- a/src/main/resources/templates/user/student/leavePassList.html
+++ b/src/main/resources/templates/user/student/leavePassList.html
@@ -3,23 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <title th:replace="~{/include/title.html::title}"></title>
+    <title th:replace="~{include/title.html::title}"></title>
 
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/leavePass/leavePassList.css}">
 
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/student/leavePassListJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{include/student/leavePassListJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
 
-<header th:replace="~{/include/headerNavFooter.html::header}">
+<header th:replace="~{include/headerNavFooter.html::header}">
 </header>
 
 <div id="wrap">
-    <nav th:replace="~{/include/leavePass/nav.html::nav}">
+    <nav th:replace="~{include/leavePass/nav.html::nav}">
     </nav>
     <section id="sectionWrap">
         <div class="leavePassList">
@@ -78,7 +78,7 @@
             </div>
         </div>
     </section>
-    <footer th:replace="~{/include/headerNavFooter.html::footer}">
+    <footer th:replace="~{include/headerNavFooter.html::footer}">
     </footer>
 </div>
 
