--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -12,6 +12,7 @@
 
 
     <section>
+        <div class="test">test입니다.</div>
         <div class="section-wrap">
             <div class="info-container">
                 <div class="flex">
